# mini-tensorrt

./: .gitignore  CMakeLists.txt  README.md
include/: backend.hpp  ir.hpp  onnx.pb.h  optimizer.hpp  parser.hpp
models/: dummy_model.onnx  mnist_cnn.onnx.data
scripts/: export_full_cnn.py  export_onnx.py  make_image.py  plot_benchmarks.py
src/: backend.cpp  ir.cpp  main.cpp  onnx.pb.cc  optimizer.cpp  parser.cpp
